# League-Highlights

./: .gitignore  INSTALL.txt  INSTALL_LIVE_MATCH_UPDATE.ps1  PATCH_NOTES_v10.md  PATCH_NOTES_v11.md  PATCH_NOTES_v12.md  PATCH_NOTES_v13.md  PATCH_NOTES_v14.md  PATCH_NOTES_v15.md  PATCH_NOTES_v16.md  PATCH_NOTES_v2.md  PATCH_NOTES_v21.md  PATCH_NOTES_v22.md  PATCH_NOTES_v23.md  PATCH_NOTES_v24.md  PATCH_NOTES_v25.md  PATCH_NOTES_v26.md  PATCH_NOTES_v27.md  PATCH_NOTES_v28.md  PATCH_NOTES_v3.md  PATCH_NOTES_v39.md  PATCH_NOTES_v4.md  PATCH_NOTES_v5.md  PATCH_NOTES_v6.md  PATCH_NOTES_v7.md  PATCH_NOTES_v8.md  PATCH_NOTES_v9.md  README.md  README_FIRST.txt  README_v10.md  SOURCES.md  TEST_CHECKLIST.md  VERIFY_LIVE_MATCH_SOURCE.ps1  VERIFY_LIVE_MATCH_SOURCE_FIXED.ps1  VERIFY_LIVE_MATCH_SOURCE_V6.ps1  apply_patch.py  build_exe.ps1  diagnose.bat  diagnose.py  linux_requirements.txt  (+5 more)
app/: __init__.py  assets.py  config.py  controller.py  controller_performance.py  highlight_event.py  logging_setup.py  models.py  release_notes.py  version.py
docs/: PERFORMANCE_TARGETS.md
payload/: updater.py
scripts/: download_ffmpeg.ps1  make_release.py  test_performance_reliability.py  test_smart_highlights_v2.py
tests/: test_audio_controls.py  test_clip_library_share_filter.py  test_clip_trimmer.py  test_discord_export_service.py  test_discord_profile.py  test_discord_webhook_service.py  test_feedback_profile.py  test_game_grouping.py  test_highlight_event_tracker.py  test_league_events.py  test_match_metadata_timeline.py  test_recorder_diagnostics.py  test_secure_webhook_store.py  (+5 more)
(+62 files in other folders)
