[project]
name = "league-highlights"
version = "0.6.0"
description = "Standalone League of Legends rolling highlight recorder for Windows"
requires-python = ">=3.11,<3.15"
dependencies = [
    "PySide6==6.11.1",
    "psutil==7.2.2",
    "pywin32==312",
    "PyAudioWPatch==0.2.12.8",
]

[tool.ruff]
line-length = 100
